# PuddleDuck

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.yaml
include/: PDConfig.h  PDDefaults.h  PDEasing.h  PDGoActuator.h  PDGoMotorBus.h  PDGoMotorCRC.h  PDGoMotorCmd.h  PDLeg.h  PDLog.h  PDPlayback.h  PDRecording.h  PDRobot.h  PDUtils.h  config.h.in
src/: gochangeid.cpp  puddle.cpp
